--- a/client/src/components/claimForm.css
+++ b/client/src/components/claimForm.css
@@ -1,8 +1,12 @@
 .btn-block {
     display: block;
     width: 100%;
-  }
-  
+}
+
+.add-form {
+    margin-bottom: 40px;
+}
+
 .form-control {
     margin: 20px 0;
   }
