--- a/client/src/components/HeroSection.css
+++ b/client/src/components/HeroSection.css
@@ -4,12 +4,13 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: left;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
+    padding-top: 50px;
     padding-left: 150px;
     padding-right: 150px;
-    object-fit: contain;
+    padding-bottom: 50px;
 }
 
 .hero-container > h1 {
