--- a/client/src/components/DashCards.css
+++ b/client/src/components/DashCards.css
@@ -21,15 +21,11 @@
 
   }
   
-  .cards__wrapper {
-    display: flex;
-    margin: 30px 0 30px 0;
-  }
   
   .cards__items {
     position: relative;
     display: flex;
-    justify-content: center;
+    align-items: center;
     width: 60%;
   }
   .cards__item {
