--- a/client/src/components/Dashboard.css
+++ b/client/src/components/Dashboard.css
@@ -1,6 +1,4 @@
-.hero-container {
-    background: url('/public/images/img-dbs 1.jpg') center center/cover no-repeat;
-    height: 100vh;
+.hero-container1 {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -11,6 +9,7 @@
     padding-left: 150px;
     padding-right: 150px;
     padding-bottom: 50px;
+    margin-top: 20px;
 }
 
 .hero-container > h1 {
