--- a/client/src/components/claimComponentCSS.css
+++ b/client/src/components/claimComponentCSS.css
@@ -12,6 +12,8 @@
     min-width: 400px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
     align-items: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
 }
 
 .styled-table thead tr {
