--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -93,7 +93,7 @@
   }
 
   .nav-menu.active {
-    background: #fff;
+    background: #fafafa;
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
@@ -157,6 +157,7 @@
     padding: 14px 20px;
     border: 1px solid #FAFAFA;
     transition: all 0.3s ease-out;
+
     
   }
 
